--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,13 @@
       </div>
     </div>
     
+    <div class="row list">
+      <div class="col-md-10 col-md-offset-1">
+        <a href="/list/complete_tasks" class="btn btn-default" role="button">Complete tasks</a>
+        <a href="/list/uncomplete_tasks" class="btn btn-default" role="button">Uncomplete tasks</a>
+      </div>
+    </div>
+    
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <div class="yield">
