--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,8 @@
+<div class="list">
+  <a href="/list/complete_tasks" class="btn btn-default" role="button">Complete tasks</a>
+  <a href="/list/uncomplete_tasks" class="btn btn-default" role="button">Uncomplete tasks</a>  
+</div>
+    
 <section id="add">
   <form action="/" method="post">
   	<div class="form-group">
@@ -23,3 +28,8 @@
     </div>
   </article>
 <% end %>
+
+<div class="list">
+  <a href="/list/complete_tasks" class="btn btn-default" role="button">Complete tasks</a>
+  <a href="/list/uncomplete_tasks" class="btn btn-default" role="button">Uncomplete tasks</a>  
+</div>
