--- a/views/uncomplete_tasks.erb
+++ b/views/uncomplete_tasks.erb
@@ -1,3 +1,8 @@
+<div class="list">
+  <a href="/list/complete_tasks" class="btn btn-default" role="button">Complete tasks</a>
+  <a href="/list/uncomplete_tasks" class="btn btn-default" role="button">Uncomplete tasks</a>  
+</div>
+
 <h2>Uncomplete Tasks</h2>
 <% @tasks.each do |task| %>
   <% unless task.complete %>
