--- a/views/incomplete_tasks.erb
+++ b/views/incomplete_tasks.erb
@@ -1,6 +1,6 @@
 <div class="list">
   <a href="/list/complete_tasks" class="btn btn-default" role="button">Complete tasks</a>
-  <a href="/list/uncomplete_tasks" class="btn btn-default" role="button">Uncomplete tasks</a>  
+  <a href="/list/incomplete_tasks" class="btn btn-default" role="button">Incomplete tasks</a>  
 </div>
 
 <h2>Uncomplete Tasks</h2>
