--- a/views/incomplete_tasks.erb
+++ b/views/incomplete_tasks.erb
@@ -3,7 +3,7 @@
   <a href="/list/incomplete_tasks" class="btn btn-default" role="button">Incomplete tasks</a>  
 </div>
 
-<h2>Uncomplete Tasks</h2>
+<h2>Incomplete Tasks</h2>
 <% @tasks.each do |task| %>
   <% unless task.complete %>
     <article>
