--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <div class="row text-center">
-      <div class="col-sm-10 col-sm-offset-1">
+      <div class="col-xs-10 col-xs-offset-1">
         <header>
           <hgroup>
             <h1><a href="/">To-Do List</a></h1>
@@ -23,7 +23,7 @@
     </div>
     
     <div class="row">
-      <div class="col-sm-10 col-sm-offset-1">
+      <div class="col-xs-10 col-xs-offset-1">
         <div class="yield">
           <%= yield %>
         </div>
@@ -31,7 +31,7 @@
     </div>
     
     <div class="row text-center">
-      <div class="col-sm-10 col-sm-offset-1">
+      <div class="col-xs-10 col-xs-offset-1">
         <div>
           <footer>
             © 2017 <strong>Rod Inc</strong>, All rights reserved
